<resources>
    <string name="app_name">Movie Sub 1</string>
    <string name="poster_movies">Poster</string>
    <string name="judul_movies">Judul Movies</string>
    <string name="genre_movies">Genre Movies</string>
    <string name="back_poster">Back Poster</string>
    <string name="tanggal_rilis">Tanggal Rilis</string>
    <string name="durasi_movies">Durasi Movies</string>
    <string name="sinopsis_movies">Sinopsis Movies</string>
    <string name="rate">0.0</string>
    <string name="icon_star">Icon Star</string>

    <array name="list_poster_movies">
        <item>@drawable/poster_a_star</item>
        <item>@drawable/poster_aquaman</item>
        <item>@drawable/poster_avengerinfinity</item>
        <item>@drawable/poster_birdbox</item>
        <item>@drawable/poster_bohemian</item>
        <item>@drawable/poster_bumblebee</item>
        <item>@drawable/poster_creed</item>
        <item>@drawable/poster_deadpool</item>
        <item>@drawable/poster_dragon</item>
        <item>@drawable/poster_dragonball</item>
        <item>@drawable/poster_glass</item>
        <item>@drawable/poster_hunterkiller</item>
        <item>@drawable/poster_marrypopins</item>
        <item>@drawable/poster_mortalengine</item>
        <item>@drawable/poster_preman</item>
        <item>@drawable/poster_robinhood</item>
        <item>@drawable/poster_spiderman</item>
        <item>@drawable/poster_thegirl</item>
        <item>@drawable/poster_themule</item>
        <item>@drawable/poster_venom</item>
    </array>

    <string-array name="list_voting_rate">
        <item>7.4</item>
        <item>6.8</item>
        <item>8.3</item>
        <item>7.1</item>
        <item>8.2</item>
        <item>6.5</item>
        <item>6.7</item>
        <item>7.2</item>
        <item>8.1</item>
        <item>7.4</item>
        <item>6.8</item>
        <item>5.9</item>
        <item>6.8</item>
        <item>5.9</item>
        <item>5.9</item>
        <item>5.8</item>
        <item>8.5</item>
        <item>5.8</item>
        <item>6.4</item>
        <item>6.6</item>
    </string-array>

    <string-array name="list_judul_movies">
        <item>A Star Is Born</item>
        <item>Aquaman</item>
        <item>Avengers: Infinity War</item>
        <item>Bird Box</item>
        <item>Bohemian Rhapsody</item>
        <item>Bumblebee</item>
        <item>Creed II</item>
        <item>Once Upon a Deadpool</item>
        <item>How to Train Your Dragon: The Hidden World</item>
        <item>Dragon Ball Super: Broly</item>
        <item>Glass</item>
        <item>Hunter Killer</item>
        <item>Mary Poppins Returns</item>
        <item>Mortal Engines</item>
        <item>Preman Pensiun</item>
        <item>Robin Hood</item>
        <item>Spider-Man: Into the Spider-Verse</item>
        <item>The Girl in the Spider\'s Web</item>
        <item>The Mule</item>
        <item>Venom</item>
    </string-array>

    <string-array name="list_tglRilis">
        <item>October 5, 2018</item>
        <item>December 21, 2018</item>
        <item>April 25, 2018</item>
        <item>November 12, 2018</item>
        <item>October 24, 2018</item>
        <item>December 15, 2018</item>
        <item>November 21, 2018</item>
        <item>December 11, 2018</item>
        <item>January 3, 2019</item>
        <item>December 14, 2018</item>
        <item>January 16, 2019</item>
        <item>October 19, 2018</item>
        <item>December 19, 2018</item>
        <item>December 5, 2018</item>
        <item>January 17, 2019</item>
        <item>November 20, 2018</item>
        <item>December 7, 2018</item>
        <item>October 26, 2018</item>
        <item>December 14, 2018</item>
        <item>September 28, 2018</item>
    </string-array>

    <string-array name="list_durasi_movies">
        <item>2h 15m</item>
        <item>2h 23m</item>
        <item>2h 29m</item>
        <item>2h 4m</item>
        <item>2h 15m</item>
        <item>1h 54m</item>
        <item>2h 10m</item>
        <item>1h 57m</item>
        <item>1h 44m</item>
        <item>1h 41m</item>
        <item>2h 9m</item>
        <item>2h 2m</item>
        <item>2h 11m</item>
        <item>2h 8m</item>
        <item>1h 34m</item>
        <item>1h 56m</item>
        <item>1h 57m</item>
        <item>1h 57m</item>
        <item>1h 56m</item>
        <item>1h 52m</item>
    </string-array>

    <string-array name="list_genre_movies">
        <item>Drama, Music, Romance</item>
        <item>Fantasy, Adventure</item>
        <item>Adventure, Action, Fantasy</item>
        <item>Thriller, Drama</item>
        <item>Drama, Music</item>
        <item>Action, Adventure, Science Fiction</item>
        <item>Drama, Action</item>
        <item>Comedy, Action</item>
        <item>Animation, Family, Adventure</item>
        <item>Action, Animation, Science Fiction, Fantasy</item>
        <item>Thriller, Mystery, Drama, Fantasy</item>
        <item>Action, Thriller</item>
        <item>Fantasy, Family, Comedy</item>
        <item>Science Fiction, Action, Adventure, Fantasy, Thriller</item>
        <item>Comedy, Drama</item>
        <item>Adventure, Action, Thriller</item>
        <item>Action, Adventure, Animation, Science Fiction, Comedy</item>
        <item>Thriller, Crime, Action</item>
        <item>Crime, Drama, Thriller</item>
        <item>Science Fiction, Action</item>
    </string-array>

    <string-array name="list_sinopsis_movies">
        <item>Seasoned musician Jackson Maine discovers - and falls in love with - struggling artist Ally. She has just about given up on her dream to make it big as a singer, until Jack coaxes her into the spotlight. But even as Ally\'s career takes off, the personal side of their relationship is breaking down, as Jack fights an ongoing battle with his own internal demons.</item>
        <item>Once home to the most advanced civilization on Earth, the city of Atlantis is now an underwater kingdom ruled by the power-hungry King Orm. With a vast army at his disposal, Orm plans to conquer the remaining oceanic people - and then the surface world. Standing in his way is Aquaman, Orm\'s half-human, half-Atlantean brother and true heir to the throne. With help from royal counselor Vulko, Aquaman must retrieve the legendary Trident of Atlan and embrace his destiny as protector of the deep.</item>
        <item>As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have fought for has led up to this moment - the fate of Earth and existence itself has never been more uncertain.</item>
        <item>When a mysterious force decimates the world\'s population, only one thing is certain: if you see it, you take your life. Facing the unknown, Malorie finds love, hope and a new beginning only for it to unravel. Now she must flee with her two children down a treacherous river to the one place left that may offer sanctuary. But to survive, they\'ll have to undertake the perilous two-day journey blindfolded.</item>
        <item>Singer Freddie Mercury, guitarist Brian May, drummer Roger Taylor and bass guitarist John Deacon take the music world by storm when they form the rock \'n\' roll band Queen in 1970. Hit songs become instant classics. When Mercury\'s increasingly wild lifestyle starts to spiral out of control, Queen soon faces its greatest challenge yet – finding a way to keep the band together amid the success and excess.</item>
        <item>On the run in the year 1987, Bumblebee finds refuge in a junkyard in a small Californian beach town. Charlie, on the cusp of turning 18 and trying to find her place in the world, discovers Bumblebee, battle-scarred and broken.  When Charlie revives him, she quickly learns this is no ordinary yellow VW bug.</item>
        <item>Follows Adonis Creed\'s life inside and outside of the ring as he deals with new found fame, issues with his family, and his continuing quest to become a champion.</item>
        <item>A kidnapped Fred Savage is forced to endure Deadpool\'s PG-13 rendition of Deadpool 2 as a Princess Bride-esque story that\'s full of magic, wonder and zero F\'s.</item>
        <item>As Hiccup fulfills his dream of creating a peaceful dragon utopia, Toothless\' discovery of an untamed, elusive mate draws the Night Fury away.  When danger mounts at home and Hiccup\'s reign as village chief is tested, both dragon and rider must make impossible decisions to save their kind.</item>
        <item>Earth is peaceful following the Tournament of Power. Realizing that the universes still hold many more strong people yet to see, Goku spends all his days training to reach even greater heights. Then one day, Goku and Vegeta are faced by a Saiyan called \'Broly\' who they\'ve never seen before. The Saiyans were supposed to have been almost completely wiped out in the destruction of Planet Vegeta, so what\'s this one doing on Earth? This encounter between the three Saiyans who have followed completely different destinies turns into a stupendous battle, with even Frieza (back from Hell) getting caught up in the mix.</item>
        <item>In a series of escalating encounters, security guard David Dunn uses his supernatural abilities to track Kevin Wendell Crumb, a disturbed man who has twenty-four personalities. Meanwhile, the shadowy presence of Elijah Price emerges as an orchestrator who holds secrets critical to both men.</item>
        <item>Captain Glass of the USS "Arkansas" discovers that a coup d\'état is taking place in Russia, so he and his crew join an elite group working on the ground to prevent a war.</item>
        <item>In Depression-era London, a now-grown Jane and Michael Banks, along with Michael\'s three children, are visited by the enigmatic Mary Poppins following a personal loss. Through her unique magical skills, and with the aid of her friend Jack, she helps the family rediscover the joy and wonder missing in their lives.</item>
        <item>Set in a world many thousands of years in the future. Earth\'s cities now roam the globe on huge wheels, devouring each other in a struggle for ever diminishing resources. On one of these massive Traction Cities, Tom Natsworthy has an unexpected encounter with a mysterious young woman from the Outlands who will change the course of his life forever.</item>
        <item>After three years, the business of Muslihat, who has retired as a thug, has a problem. Sales decline. Muslihat also faces new problems when Safira, her only daughter, grows up in adolescence and begins to be visited by boys. A bigger problem: frictions between his former subordinates.</item>
        <item>A war-hardened Crusader and his Moorish commander mount an audacious revolt against the corrupt English crown.</item>
        <item>Miles Morales is juggling his life between being a high school student and being a spider-man. When Wilson "Kingpin" Fisk uses a super collider, others from across the Spider-Verse are transported to this dimension.</item>
        <item>In Stockholm, Sweden, hacker Lisbeth Salander is hired by Frans Balder, a computer engineer, to retrieve a program that he believes it is too dangerous to exist.</item>
        <item>A 90 year old horticulturalist and Korean War veteran is caught transporting $3 million worth of cocaine through Illinois for a Mexican drug cartel.</item>
        <item>Investigative journalist Eddie Brock attempts a comeback following a scandal, but accidentally becomes the host of Venom, a violent, super powerful alien symbiote. Soon, he must rely on his newfound powers to protect the world from a shadowy organization looking for a symbiote of their own.</item>
    </string-array>
</resources>
