<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MoviesDetails">

    <ImageView
        android:id="@+id/detail_back_poster"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:scaleType="centerCrop"
        android:background="@drawable/ic_launcher_background"
        android:contentDescription="@string/back_poster" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-25dp">

        <ImageView
            android:id="@+id/detail_poster"
            android:layout_width="130dp"
            android:layout_height="180dp"
            android:background="@mipmap/ic_launcher"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/poster_movies"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/detail_judul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/judul_movies"
                android:layout_marginTop="30dp"
                android:padding="5dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#F44336"/>

            <TextView
                android:id="@+id/detail_tgl_rilis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tanggal_rilis"
                android:padding="5dp"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/detail_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/genre_movies"
                android:padding="5dp"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/detail_durasi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/durasi_movies"
                android:padding="5dp"
                android:textSize="15sp" />

                <TextView
                    android:id="@+id/detail_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/rate"
                    android:textSize="15sp"
                    android:padding="5dp"
                    android:drawableEnd="@drawable/ic_star"/>

        </LinearLayout>

    </LinearLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sinopsis_movies"
                android:textColor="#F44336"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/detail_sinopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sinopsis_movies"
                android:textSize="15sp"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>