<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    android:layout_margin="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="7dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <ImageView
            android:id="@+id/poster_movies"
            android:layout_width="90dp"
            android:layout_height="130dp"
            android:scaleType="fitXY"
            app:srcCompat="@mipmap/ic_launcher_round"
            android:contentDescription="@string/poster_movies"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="10dp">

            <TextView
                android:id="@+id/judul_movies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/judul_movies"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:padding="5dp"/>
            <TextView
                android:id="@+id/tgl_rilis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tanggal_rilis"
                android:padding="2dp"/>
            <TextView
                android:id="@+id/genre_movies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/genre_movies"
                android:padding="2dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/rate"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/rate"
                    android:padding="5dp"/>

                <ImageView
                    android:id="@+id/rating_vote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_star"
                    android:padding="5dp"
                    android:contentDescription="@string/icon_star" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>